# calculator

./: .gitignore  README.md  Shakefile.hs  cabal.project.freeze  calculator.cabal  shell.nix
client/: packages.dhall  spago.dhall
client/css/: main.css
client/env/: Dev.purs  Prod.purs
client/src/: AppM.purs  Main.purs
client/src/Calculator/: API.purs  Calculation.purs  Cookies.purs  Expr.purs  LocalStorage.purs  Navigate.purs  Routes.purs  WebSocket.purs
client/src/Calculator/Components/: Calculator.purs  CalculatorPage.purs  OpaqueSlot.purs  Router.purs  SelfIntro.purs
server/: .stylish-haskell.yaml  server.cabal  tables.sql
server/css/: main.css
server/src/lib/Calculator/: AppM.hs  Database.hs  Expr.hs
server/src/lib/Calculator/Endpoints/: Calculations.hs  Evaluate.hs  HTML.hs
