cabal-version:       >=1.10

name: calculator
version: 0.1.0.0
author: William Yao
build-type: Simple

executable calculator
  main-is: Shakefile.hs
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wredundant-constraints
               -Wnoncanonical-monad-instances -fno-warn-name-shadowing
  build-depends:
      base ==4.*
    , shake
  default-language: Haskell2010
