cabal-version:       >=1.10

name: server
version: 0.1.0.0
author: William Yao
build-type: Simple

flag prod
     description: Production build
     manual: True
     default: False

library
  exposed-modules:
    Calculator.Expr
    Calculator.Database
    Calculator.AppM
    Calculator.Endpoints.HTML
    Calculator.Endpoints.Evaluate
    Calculator.Endpoints.Calculations
  hs-source-dirs: src/lib
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wredundant-constraints
               -Wnoncanonical-monad-instances -fno-warn-name-shadowing
  build-depends:
      base ==4.*
    , aeson
    , blaze-html
    , http-media
    , mtl
    , opaleye
    , postgresql-simple
    , product-profunctors
    , servant
    , servant-server
    , text
    , time
    , transformers
    , websockets
  default-language: Haskell2010

executable server-exe
  main-is: server.hs
  other-modules: Env
  hs-source-dirs: src/bin
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wredundant-constraints
               -Wnoncanonical-monad-instances -fno-warn-name-shadowing
  if flag(prod)
    cpp-options: -DPROD
  build-depends:
      base ==4.*
    , blaze-html
    , bytestring
    , http-types
    , mtl
    , postgresql-simple
    , servant-server
    , server
    , string-interpolate
    , wai
    , wai-websockets
    , warp
    , websockets
  default-language: Haskell2010
